Updated Counterpoint Histogram to use ClusteredXYBarRenderer.